# docs/swagger.json
@@ -30,7 +30,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.RequestLoginDTO"
+                            "$ref": "#/definitions/auth.LoginRequest"
                         }
                     }
                 ],
@@ -38,31 +38,37 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.loginResponse"
+                            "$ref": "#/definitions/auth.AccessResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/auth.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/auth.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/auth.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "default": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/auth.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     }
                 }
@@ -83,25 +89,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.refreshResponse"
+                            "$ref": "#/definitions/auth.AccessResponse"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/auth.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/auth.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "default": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/auth.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     }
                 }
@@ -141,34 +147,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/user.FindUserDTO"
-                            }
+                            "$ref": "#/definitions/users.FindUsersResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     }
                 }
@@ -206,31 +209,31 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/users.createResponse"
+                            "$ref": "#/definitions/users.CreateUserResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     }
                 }
@@ -271,25 +274,25 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     }
                 }
@@ -322,31 +325,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/users.successResponse"
+                            "$ref": "#/definitions/response.SuccessResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     }
                 }
@@ -391,31 +394,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/users.successResponse"
+                            "$ref": "#/definitions/response.SuccessResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/users.errorResponse"
+                            "$ref": "#/definitions/response.AppError"
                         }
                     }
                 }
@@ -423,7 +426,15 @@
         }
     },
     "definitions": {
-        "auth.RequestLoginDTO": {
+        "auth.AccessResponse": {
+            "type": "object",
+            "properties": {
+                "access": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.LoginRequest": {
             "type": "object",
             "properties": {
                 "login": {
@@ -434,27 +445,32 @@
                 }
             }
         },
-        "auth.errorResponse": {
+        "response.AppError": {
+            "type": "object",
+            "properties": {
+                "developer_message": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "params": {
+                    "$ref": "#/definitions/response.Map"
+                }
+            }
+        },
+        "response.Map": {
+            "type": "object",
+            "additionalProperties": true
+        },
+        "response.SuccessResponse": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "auth.loginResponse": {
-            "type": "object",
-            "properties": {
-                "access": {
-                    "type": "string"
-                }
-            }
-        },
-        "auth.refreshResponse": {
-            "type": "object",
-            "properties": {
-                "access": {
-                    "type": "string"
+                },
+                "params": {
+                    "$ref": "#/definitions/response.Map"
                 }
             }
         },
@@ -527,7 +543,7 @@
                 }
             }
         },
-        "users.createResponse": {
+        "users.CreateUserResponse": {
             "type": "object",
             "properties": {
                 "id": {
@@ -535,19 +551,17 @@
                 }
             }
         },
-        "users.errorResponse": {
+        "users.FindUsersResponse": {
             "type": "object",
             "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "users.successResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
+                "count": {
+                    "type": "integer"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/user.FindUserDTO"
+                    }
                 }
             }
         }
