# src/controller/http/handlers/auth/service.go
@@ -1,10 +1,13 @@
 package auth
 
 import (
+	"fmt"
 	"net/http"
+	"test-project/src/controller/http/response"
 	"test-project/src/controller/repository"
 	"test-project/src/pkg/jwt"
 	"test-project/src/pkg/utils"
+	"test-project/src/pkg/validate"
 	"time"
 
 	"github.com/allegro/bigcache/v3"
@@ -27,38 +30,54 @@ func NewHandler(router *echo.Echo, jwt jwt.Servicer, cache *bigcache.BigCache, s
 // @ID login
 // @Accept  json
 // @Produce  json
-// @Param input body RequestLoginDTO true "credentials"
-// @Success 200 {object} loginResponse
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
+// @Param input body LoginRequest true "credentials"
+// @Success 200 {object} AccessResponse
+// @Failure 400,403,404 {object} response.AppError
+// @Failure 500 {object} response.AppError
+// @Failure default {object} response.AppError
 // @Router /auth/login [post]
 func (h *Handler) Login(c echo.Context) error {
-	request := RequestLoginDTO{}
+	request := LoginRequest{}
 
 	if err := c.Bind(&request); err != nil {
-		return c.JSON(http.StatusBadRequest, "bad request")
+		h.Router.Logger.Error(err)
+		return response.BadRequestError("Failed to parse JSON", err.Error()).Send(c)
+	}
+
+	// is login valid?
+	if !validate.Login(request.Login) {
+		validationErr := response.BadRequestError("Incorrect login", "You can use only latin symbols and arabian numbers")
+		return validationErr.Send(c)
+	}
+
+	// is login length valid?
+	if !validate.LoginLenght(request.Login) {
+		developerMessage := fmt.Sprintf("Minimum: %d, maximum: %d", validate.MinLoginLength, validate.MaxLoginLength)
+		validationErr := response.BadRequestError("Incorrect login length", developerMessage)
+		return validationErr.Send(c)
+	}
+
+	// is password length valid?
+	if !validate.PasswordLength(request.Password) {
+		developerMessage := fmt.Sprintf("Minimum: %d, maximum: %d", validate.MinPasswordLength, validate.MaxPasswordLength)
+		validationErr := response.BadRequestError("Incorrect password length", developerMessage)
+		return validationErr.Send(c)
 	}
 
 	user, err := h.Storage.Users.FindByLogin(request.Login)
 	if err != nil {
 		if err == pg.ErrNoRows {
-			return c.JSON(http.StatusNotFound, echo.Map{
-				"message": "user not found",
-			})
+			notFoundError := response.NewAppError(http.StatusNotFound, "User not found", "")
+			return notFoundError.Send(c)
 		}
 
 		h.Router.Logger.Error(err)
-
-		return c.JSON(http.StatusInternalServerError, echo.Map{
-			"message": err.Error(),
-		})
+		systemError := response.SystemError("Internal error, try again later", err.Error())
+		return systemError.Send(c)
 	}
 
 	if hash, _ := utils.HashString(request.Password, user.Salt); hash != user.Password {
-		return c.JSON(http.StatusBadRequest, echo.Map{
-			"message": "invalid login or password",
-		})
+		return response.NewAppError(http.StatusForbidden, "Incorrect login or password", "").Send(c)
 	}
 
 	refresh, err := h.JWT.GenerateRefresh(&jwt.GenerateDTO{
@@ -68,10 +87,8 @@ func (h *Handler) Login(c echo.Context) error {
 
 	if err != nil {
 		h.Router.Logger.Error(err)
-
-		return c.JSON(http.StatusInternalServerError, echo.Map{
-			"message": err.Error(),
-		})
+		systemError := response.SystemError("Internal error, try again later", err.Error())
+		return systemError.Send(c)
 	}
 
 	access, err := h.JWT.GenerateAccess(&jwt.GenerateDTO{
@@ -81,10 +98,8 @@ func (h *Handler) Login(c echo.Context) error {
 
 	if err != nil {
 		h.Router.Logger.Error(err)
-
-		return c.JSON(http.StatusInternalServerError, echo.Map{
-			"message": err.Error(),
-		})
+		systemError := response.SystemError("Internal error, try again later", err.Error())
+		return systemError.Send(c)
 	}
 
 	c.SetCookie(&http.Cookie{
@@ -95,8 +110,8 @@ func (h *Handler) Login(c echo.Context) error {
 		HttpOnly: true,
 	})
 
-	return c.JSON(http.StatusOK, echo.Map{
-		"access": access,
+	return c.JSON(http.StatusOK, AccessResponse{
+		Access: access,
 	})
 }
 
@@ -105,30 +120,24 @@ func (h *Handler) Login(c echo.Context) error {
 // @Description refresh jwt access token
 // @ID refresh
 // @Produce  json
-// @Success 200 {object} refreshResponse
-// @Failure 403 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
+// @Success 200 {object} AccessResponse
+// @Failure 403 {object} response.AppError
+// @Failure 500 {object} response.AppError
+// @Failure default {object} response.AppError
 // @Router /auth/refresh [post]
 func (h *Handler) Refresh(c echo.Context) error {
 	cookie, err := c.Cookie("refresh")
 	if err != nil {
-		return c.JSON(http.StatusForbidden, echo.Map{
-			"message": "refresh is not found",
-		})
+		return response.NewAppError(http.StatusForbidden, "You need to login", `"refresh" is not found in cookie`).Send(c)
 	}
 
 	token, err := h.JWT.ParseRefresh(cookie.Value)
 	if err != nil {
 		if err == jwt.ErrExpired {
-			return c.JSON(http.StatusForbidden, echo.Map{
-				"message": err.Error(),
-			})
+			return response.NewAppError(http.StatusForbidden, "Token is expired", err.Error()).Send(c)
 		}
 
-		return c.JSON(http.StatusForbidden, echo.Map{
-			"message": "refresh is not valid",
-		})
+		return response.NewAppError(http.StatusForbidden, "Refresh token is not valid", err.Error()).Send(c)
 	}
 
 	refresh, err := h.JWT.GenerateRefresh(&jwt.GenerateDTO{
@@ -138,10 +147,8 @@ func (h *Handler) Refresh(c echo.Context) error {
 
 	if err != nil {
 		h.Router.Logger.Error(err)
-
-		return c.JSON(http.StatusInternalServerError, echo.Map{
-			"message": err.Error(),
-		})
+		systemError := response.SystemError("Internal error, try again later", err.Error())
+		return systemError.Send(c)
 	}
 
 	access, err := h.JWT.GenerateAccess(&jwt.GenerateDTO{
@@ -151,10 +158,8 @@ func (h *Handler) Refresh(c echo.Context) error {
 
 	if err != nil {
 		h.Router.Logger.Error(err)
-
-		return c.JSON(http.StatusInternalServerError, echo.Map{
-			"message": err.Error(),
-		})
+		systemError := response.SystemError("Internal error, try again later", err.Error())
+		return systemError.Send(c)
 	}
 
 	c.SetCookie(&http.Cookie{
@@ -165,7 +170,7 @@ func (h *Handler) Refresh(c echo.Context) error {
 		HttpOnly: true,
 	})
 
-	return c.JSON(http.StatusOK, echo.Map{
-		"access": access,
+	return c.JSON(http.StatusOK, AccessResponse{
+		Access: access,
 	})
 }
